# Vortex_AI

./: 001_initial_schema.sql  002_timescaledb_compression.sql  Cargo.toml  FINAL_STATUS.md  QUICKSTART.md  README.md  Readme.md  SETUP_COMPLETE.md  config.toml  engine.rs  local_sentiment.rs  watchdog.rs
